<resources>
    <string name="app_name">IdentiFruit</string>
    <string name="enter_text">Enter text</string>
    <string name="logo_desc">App Logo</string>
    <string name="welcome_message">Welcome to our Strawberry Ripeness Detection App!</string>
    <string name="sub_caption">Distinguish your strawberries with a click</string>
    <string name="camara_desc">This image recognition application allows you to use your camera to scan your strawberries to determine if it is ripe or unripe</string>
    <string name="gallery_desc">Upload images of strawberries from your device’s gallery that will be used for detection</string>
    <string name="upload_desc">Add images of strawberries to the training model and label their ripeness status (will process verification) for further accuracy</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="start_app">Let it Ripe!</string>
    <string name="team_lemar">© Team LEMAR</string>
    <string name="disclaimer">This image classification model was trained using PyTorch.</string>
    <string name="fruit_image">Fruit Image</string>
    <string name="prediction_result">Your Fruit: </string>
    <string name="app_desc">Identify your fruits with their nutritional values!</string>
    <string name="name">IdentiFruit</string>
    <string name="clipboard_desc">Display nutritional facts and health benefits of the fruit scanned</string>
    <string name="name_prompt">IdentiFruit wants to get to know you!</string>
    <string name="enter_name">Enter your name!</string>
    <string name="user_name_field">input field for user name</string>
    <string name="get_started">Get Started!</string>
    <string name="camera_view">Camera View</string>
    <string name="IdentiFruit" />
</resources>