<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Main layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar layout -->
        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/bg_top_bar"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="45dp"
            android:paddingTop="50dp"
            android:paddingEnd="35dp"
            android:paddingBottom="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/app_name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:fontFamily="@font/gilroy_extrabold"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_desc"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="12sp"/>
        </LinearLayout> <!-- Top bar layout -->

        <!-- Table layout -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp">

            <!-- Camera icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="70dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/camera_icon"
                    android:tint="@color/orange"/>

                <!-- Text column -->
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:text="@string/camara_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Gallery icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/gallery"
                    android:src="@drawable/gallery" />

                <!-- Text column -->
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:text="@string/gallery_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Upload icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/upload"
                    android:src="@drawable/ic_clipboard"
                    android:paddingStart="20dp"
                    android:paddingEnd="12dp"/>

                <!-- Text column -->
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="23dp"
                    android:text="@string/clipboard_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <Button
                android:id="@+id/open_scan_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open Scanner"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="40dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/team_lemar"
                android:textColor="#41FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:fontFamily="@font/gilroy_light"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textAlignment="center"/>

        </LinearLayout>

        <!-- Add strawberry cards here (or kung ano tawag sa component na yun) -->
    </LinearLayout> <!-- Main layout -->

    <!-- ndi narecognize commit ko -->
</androidx.core.widget.NestedScrollView>
