<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Main layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top bar layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="45dp"
            android:paddingTop="45dp"
            android:paddingEnd="35dp"
            android:paddingBottom="45dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/logo_tentative_1" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <!-- Welcome message layout -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:text="@string/welcome_message"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sub_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/sub_caption"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout> <!-- Welcome message layout -->
        </LinearLayout> <!-- Top bar layout -->

        <!-- Table layout -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Camera icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="70dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/camera" />

                <!-- Text column -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:text="@string/camara_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Gallery icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/gallery"
                    android:src="@drawable/gallery" />

                <!-- Text column -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="30dp"
                    android:text="@string/gallery_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Upload icon -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp">

                <!-- Image column -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/upload"
                    android:src="@drawable/upload" />

                <!-- Text column -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingStart="10dp"
                    android:paddingEnd="23dp"
                    android:text="@string/upload_desc"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_app"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:gravity="center"
                />
 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="40dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_bold"
                android:text="\u00A9 Team RAMEL"
                android:textColor="#41FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This image classification model was trained using TensorFlow."
                android:fontFamily="@font/gilroy_light"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textAlignment="center"/>

        </LinearLayout>

        <!-- Add strawberry cards here (or kung ano tawag sa component na yun) -->
    </LinearLayout> <!-- Main layout -->

    <!-- ndi narecognize commit ko -->
</androidx.core.widget.NestedScrollView>
