<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/orange"
    tools:context=".GreetingActivity"
    android:id="@+id/greeting_layout">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="150dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WELCOME!"
        android:fontFamily="@font/gilroy_extrabold"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_prompt"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/enter_name"
        android:fontFamily="@font/gilroy_regular"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:elevation="10dp"
        android:background="@drawable/bg_input_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="40dp"
        android:elevation="30dp"
        android:translationZ="10dp"
        android:backgroundTint="@color/lightGreen"/>
</androidx.constraintlayout.widget.ConstraintLayout>